--- a/partials/_toolbox.scss
+++ b/partials/_toolbox.scss
@@ -86,13 +86,13 @@
 	}
 }
 
-@media (max-width: 1400px) {
+@media (max-width: 1415px) {
 	.toolbox {
 		max-width: 1040px;
 	}
 }
 
-@media (max-width: 900px) {
+@media (max-width: 972px) {
 	.toolbox {
 		padding: 30px;
 	
@@ -103,15 +103,26 @@
 		svg,
 		.overlay,
 		i {
-			height: 80px;
-			width: 80px;
+			height: 100px;
+			width: 100px;
 			margin: 20px;
 			transition: .5s;
 		}
 	}
 }
 
-@media (max-width: 625px) {
+@media (max-width: 869px) {
+	.toolbox {
+		svg,
+		.overlay,
+		i {
+			margin: 30px;
+			height: 70px;
+			width: 70px;
+		}
+	}
+}
+	 @media (max-width: 625px) {
 	.toolbox {
 		padding: 30px 0;
 	
